--- a/aws/DRVault-Single-Deployment.yaml
+++ b/aws/DRVault-Single-Deployment.yaml
@@ -314,38 +314,23 @@ Resources:
             2-restartSSM:
               command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
         configServices:
-          files:
-            C:\CyberArk\Deployment\AllowDR.ps1:
-              content:
-                Fn::Sub: |-
-                  $DBParmFile='C:\Program Files (x86)\PrivateArk\Server\Conf\dbparm.ini'
-                  $DBParmContent = Get-Content -Path $DBParmFile
-                  $DBParmNewContent = ForEach ($Line in $DBParmContent) {
-                      if ($Line -like '*169.254.169.123*')
-                      {
-                          Write-Output $Line
-                          Write-Output 'AllowNonStandardFWAddresses=[${VaultPrivateIP}],Yes,1858:outbound/tcp'
-                      }
-                      else
-                      {
-                          Write-Output $Line
-                      }
-                  }
-                  Set-Content -Path $DBParmFile -Value $DBParmNewContent
           commands:
             1-downloadLicenseRecpub:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\VaultInit.ps1 -VaultFilesBucket ${VaultFilesBucket} -LicenseFileKey ${LicenseFile} -RecoveryPublicKey ${RecoveryPublicKey} -Region ${AWS::Region}
-            2-allowDR:
+            2-fixENE:
               command: >
-                powershell.exe -File C:\CyberArk\Deployment\AllowDR.ps1
-            3-postInstall:
+                powershell.exe -File C:\CyberArk\Deployment\FixENE.ps1
+            3-allowDR:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\AllowDR.ps1 -PrimaryVaultIP ${VaultPrivateIP}
+            4-postInstall:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -SSMDRPassParameterID ${StoreDRPassword.SsmId} -IsPrimaryOrDR "DR" -PrimaryVaultIP ${VaultPrivateIP} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region}
-            4-removePermissions:
+            5-removePermissions:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\VaultRemoveIAMPolicies.ps1 -Role ${VaultInstancesRole}
-            5-ChangeHostName:
+            6-ChangeHostName:
               command: !Sub >
                 powershell.exe -Command Rename-Computer -NewName ${VaultHostName} -Force -Restart
               waitAfterCompletion: forever
