--- a/aws/DRVault-Single-Deployment.yaml
+++ b/aws/DRVault-Single-Deployment.yaml
@@ -274,6 +274,11 @@ Resources:
         - Key: Name
           Value: !Sub '${VaultInstanceName}'
       SecurityGroupIds: !Ref 'VaultInstanceSecurityGroups'
+      BlockDeviceMappings:
+        - DeviceName: "/dev/sda1"
+          Ebs:
+            VolumeSize: 30
+            Encrypted: true
       SubnetId: !Ref 'DRInstanceSubnetId'
       ImageId: !FindInMap
         - RegionMap
