--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -85,7 +85,7 @@ Resources:
     Type: 'AWS::IAM::Role'
     Properties:
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: 2012-10-17
         Statement:
           - Effect: Allow
             Principal:
@@ -96,7 +96,7 @@ Resources:
       Policies:
         - PolicyName: CloudWatch
           PolicyDocument:
-            Version: '2012-10-17'
+            Version: 2012-10-17
             Statement:
               - Effect: Allow
                 Action:
@@ -109,7 +109,7 @@ Resources:
                   - '*'
         - PolicyName: SSM
           PolicyDocument:
-            Version: '2012-10-17'
+            Version: 2012-10-17
             Statement:
               - Effect: Allow
                 Action:
@@ -156,7 +156,9 @@ Resources:
       Runtime: python3.7
       Handler: index.lambda_handler
       Timeout: 60
-      Role: !GetAtt LambdaDeployRole.Arn
+      Role: !GetAtt 
+        - LambdaDeployRole
+        - Arn
     Condition: EULACondition
   DeletePasswordLambda:
     Type: 'AWS::Lambda::Function'
@@ -190,12 +192,16 @@ Resources:
       Runtime: python3.7
       Handler: index.lambda_handler
       Timeout: 60
-      Role: !GetAtt LambdaDeployRole.Arn
+      Role: !GetAtt 
+        - LambdaDeployRole
+        - Arn
     Condition: EULACondition
   StoreAdminPassword:
     Type: 'AWS::CloudFormation::CustomResource'
     Properties:
-      ServiceToken: !GetAtt StorePasswordLambda.Arn
+      ServiceToken: !GetAtt 
+        - StorePasswordLambda
+        - Arn
       Password: !Ref VaultAdminPassword
     Condition: EULACondition
     DependsOn:
@@ -204,27 +210,30 @@ Resources:
     Type: 'AWS::CloudFormation::CustomResource'
     Version: '1.0'
     Properties:
-      ServiceToken: !GetAtt DeletePasswordLambda.Arn
-      key: !GetAtt StoreAdminPassword.SsmId
-      dummyDependency:
-        'Fn::If':
-          - CreateCPMCondition
-          - 'Fn::GetAtt':
-              - CPMMachine
+      ServiceToken: !GetAtt 
+        - DeletePasswordLambda
+        - Arn
+      key: !GetAtt 
+        - StoreAdminPassword
+        - SsmId
+      dummyDependency: !If 
+        - CreateCPMCondition
+        - !GetAtt 
+          - CPMMachine
+          - PrivateIp
+        - !If 
+          - CreatePVWACondition
+          - !GetAtt 
+            - PVWAMachine
+            - PrivateIp
+          - !If 
+            - CreatePSMCondition
+            - !GetAtt 
+              - PSMMachine
               - PrivateIp
-          - 'Fn::If':
-              - CreatePVWACondition
-              - 'Fn::GetAtt':
-                  - PVWAMachine
-                  - PrivateIp
-              - 'Fn::If':
-                  - CreatePSMCondition
-                  - 'Fn::GetAtt':
-                      - PSMMachine
-                      - PrivateIp
-                  - 'Fn::GetAtt':
-                      - PSMPMachine
-                      - PrivateIp
+            - !GetAtt 
+              - PSMPMachine
+              - PrivateIp
     Condition: EULACondition
   ComponentInstanceProfile:
     Type: 'AWS::IAM::InstanceProfile'
@@ -249,7 +258,7 @@ Resources:
       Policies:
         - PolicyName: LogRolePolicy
           PolicyDocument:
-            Version: '2012-10-17'
+            Version: 2012-10-17
             Statement:
               - Effect: Allow
                 Action:
@@ -301,7 +310,15 @@ Resources:
                     C:\Program
                     Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
           commands:
-            1-downloadLatestSSM:
+            1-cloudwatch:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\CloudWatch.ps1
+                -LogGroup ${LogGroup} -CPMCfnInitLogStream
+                ${CPMCfnInitLogStream} -CPMConfiguration 
+                ${CPMConfigurationsLog} -CPMRegistration 
+                ${CPMRegistrationLog} -CPMSetLocalService
+                ${CPMSetLocalServiceLog} -Region ${AWS::Region}
+            2-downloadLatestSSM:
               command: !Sub >
                 powershell.exe -Command
                 [Net.ServicePointManager]::SecurityProtocol =
@@ -311,68 +328,62 @@ Resources:
                 -UseBasicParsing
               waitAfterCompletion: '0'
               ignoreErrors: 'true'
-            2-updateLatestSSM:
+            3-updateLatestSSM:
               command: >
                 powershell.exe -Command Start-Process -FilePath
                 $env:USERPROFILE\Desktop\SSMAgent_latest.exe -ArgumentList "/S"
                 -Wait
               waitAfterCompletion: '0'
               ignoreErrors: 'true'
-            3-removeLatestSSM:
+            4-removeLatestSSM:
               command: >
                 powershell.exe -Command rm -Force
                 $env:USERPROFILE\Desktop\SSMAgent_latest.exe
               waitAfterCompletion: '0'
               ignoreErrors: 'true'
-            4-restartSSM:
+            5-restartSSM:
               command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
               waitAfterCompletion: '60'
               ignoreErrors: 'true'
         configServices:
           commands:
-            1-cloudwatch:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\CloudWatch.ps1
-                -LogGroup ${LogGroup} -CPMCfnInitLogStream
-                ${CPMCfnInitLogStream} -CPMConfiguration ${CPMConfigurationsLog}
-                -CPMRegistration ${CPMRegistrationLog} -CPMSetLocalService
-                ${CPMSetLocalServiceLog} -Region ${AWS::Region}
-            2-configuration:
-              command:
-                'Fn::Sub':
-                  - >-
-                    powershell.exe -File
-                    C:\CyberArk\Deployment\CPMConfiguration.ps1 -VaultIpAddress
-                    ${VaultIpAddress} -VaultAdminUser ${VaultAdminUser}
-                    -VaultPort 1858
-                  - VaultIpAddress: !If 
-                      - DRValueEmpty
-                      - !Sub '${VaultPrivateIP}'
-                      - !Sub '${VaultPrivateIP},${DRPrivateIP}'
+            1-configuration:
+              command: !Sub 
+                - >-
+                  powershell.exe -File
+                  C:\CyberArk\Deployment\CPMConfiguration.ps1 -VaultIpAddress
+                  ${VaultIpAddress} -VaultAdminUser ${VaultAdminUser} -VaultPort
+                  1858
+                - VaultIpAddress: !If 
+                    - DRValueEmpty
+                    - !Sub '${VaultPrivateIP}'
+                    - !Sub '${VaultPrivateIP},${DRPrivateIP}'
               waitAfterCompletion: '0'
-            3-registration:
+            2-registration:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\CPMRegistration.ps1
                 -VaultAdminUser ${VaultAdminUser} -SSMAdminPassParameterID
                 ${StoreAdminPassword.SsmId}
               waitAfterCompletion: '0'
+            3-configureCPMService:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1
+                -Username "PasswordManagerUser" -Services "CyberArk Central
+                Policy Manager Scanner"
+              waitAfterCompletion: '0'
             4-configureCPMService:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1
-                -Username "PasswordManagerUser" -Services "CyberArk Central Policy Manager Scanner"
+                -Username "PasswordManagerUser" -Services "CyberArk Password
+                Manager"
               waitAfterCompletion: '0'
-            5-configureCPMService:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1
-                -Username "PasswordManagerUser" -Services "CyberArk Password Manager"
-              waitAfterCompletion: '0'
-            6-CPMserviceConfig:
+            5-CPMserviceConfig:
               command: sc config "CyberArk Password Manager" start=auto
               waitAfterCompletion: '0'
-            7-CPMSserviceConfig:
+            6-CPMSserviceConfig:
               command: sc config "CyberArk Central Policy Manager Scanner" start=auto
               waitAfterCompletion: '0'
-            8-ChangeHostName:
+            7-ChangeHostName:
               command: !Sub >
                 powershell.exe -Command Rename-Computer -NewName
                 ${ComponentHostName} -Force -Restart
@@ -478,21 +489,20 @@ Resources:
                 -Username "PVWAReportsUser" -Services "CyberArk Scheduled Tasks"
               waitAfterCompletion: '0'
             2-configuration:
-              command:
-                'Fn::Sub':
-                  - >-
-                    powershell.exe -File
-                    C:\CyberArk\Deployment\PVWAConfiguration.ps1 -VaultIpAddress
-                    ${VaultIpAddress} -VaultAdminUser ${VaultAdminUser}
-                    -VaultPort 1858 -HostName ${InputHostname}
-                  - VaultIpAddress: !If 
-                      - DRValueEmpty
-                      - !Sub '${VaultPrivateIP}'
-                      - !Sub '${VaultPrivateIP},${DRPrivateIP}'
-                    InputHostname: !If 
-                      - PVWAHostNameEmpty
-                      - empty
-                      - !Sub '${PVWAHostName}'
+              command: !Sub 
+                - >-
+                  powershell.exe -File
+                  C:\CyberArk\Deployment\PVWAConfiguration.ps1 -VaultIpAddress
+                  ${VaultIpAddress} -VaultAdminUser ${VaultAdminUser} -VaultPort
+                  1858 -HostName ${InputHostname}
+                - VaultIpAddress: !If 
+                    - DRValueEmpty
+                    - !Sub '${VaultPrivateIP}'
+                    - !Sub '${VaultPrivateIP},${DRPrivateIP}'
+                  InputHostname: !If 
+                    - PVWAHostNameEmpty
+                    - empty
+                    - !Sub '${PVWAHostName}'
               waitAfterCompletion: '0'
             3-registration:
               command: !Sub >
@@ -568,12 +578,12 @@ Resources:
                     Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
           commands:
             1-cloudwatch:
-              command: !Sub >-
+              command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\CloudWatch.ps1
                 -LogGroup ${LogGroup} -PSMCfnInitLogStream
                 ${PSMCfnInitLogStreamLog} -PSMConfiguration
-                ${PSMConfigurationsLog} -PSMRegistration ${PSMRegistrationLog}
-                -Region ${AWS::Region}
+                ${PSMConfigurationsLog} -PSMRegistration
+                ${PSMRegistrationLog} -Region ${AWS::Region}
             2-downloadLatestSSM:
               command: >
                 powershell.exe -Command
@@ -604,17 +614,16 @@ Resources:
         configServices:
           commands:
             1-configuration:
-              command:
-                'Fn::Sub':
-                  - >-
-                    powershell.exe -File
-                    C:\CyberArk\Deployment\PSMConfiguration.ps1 -VaultIpAddress
-                    ${VaultIpAddress} -VaultAdminUser ${VaultAdminUser}
-                    -VaultPort 1858
-                  - VaultIpAddress: !If 
-                      - DRValueEmpty
-                      - !Sub '${VaultPrivateIP}'
-                      - !Sub '${VaultPrivateIP},${DRPrivateIP}'
+              command: !Sub 
+                - >-
+                  powershell.exe -File
+                  C:\CyberArk\Deployment\PSMConfiguration.ps1 -VaultIpAddress
+                  ${VaultIpAddress} -VaultAdminUser ${VaultAdminUser} -VaultPort
+                  1858
+                - VaultIpAddress: !If 
+                    - DRValueEmpty
+                    - !Sub '${VaultPrivateIP}'
+                    - !Sub '${VaultPrivateIP},${DRPrivateIP}'
               waitAfterCompletion: '0'
             2-registration:
               command: !Sub >
@@ -775,17 +784,16 @@ Resources:
                 ${StoreAdminPassword.SsmId} ${AWS::Region} ${ComponentHostName}
                 waitAfterCompletion: '0'
             4-PSMPdeploy:
-              command:
-                'Fn::Sub':
-                  - >-
-                    hostname=`curl
-                    http://169.254.169.254/latest/meta-data/instance-id` &&
-                    /root/CD-Image/register_and_activation.sh
-                    /root/CD-Image/user.cred ${VaultIpAddress} $hostname y
-                  - VaultIpAddress: !If 
-                      - DRValueEmpty
-                      - !Sub '${VaultPrivateIP}'
-                      - !Sub '${VaultPrivateIP},${DRPrivateIP}'
+              command: !Sub 
+                - >-
+                  hostname=`curl
+                  http://169.254.169.254/latest/meta-data/instance-id` &&
+                  /root/CD-Image/register_and_activation.sh
+                  /root/CD-Image/user.cred ${VaultIpAddress} $hostname y
+                - VaultIpAddress: !If 
+                    - DRValueEmpty
+                    - !Sub '${VaultPrivateIP}'
+                    - !Sub '${VaultPrivateIP},${DRPrivateIP}'
               waitAfterCompletion: '0'
     Condition: CreatePSMPCondition
     CreationPolicy:
