--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -377,13 +377,8 @@ Resources:
       UserData: !Base64 
         'Fn::Sub': >-
           <script>
-
-          cfn-init.exe -v -s ${AWS::StackId} -r VaultMachine --region
-          ${AWS::Region}
-
-          cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource
-          VaultMachine --region ${AWS::Region}
-
+          cfn-init.exe -v -s ${AWS::StackId} -r VaultMachine --configsets ascending
+          --region ${AWS::Region}
           </script>
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref VaultInstancesProfile
@@ -434,7 +429,7 @@ Resources:
                 ${AWS::Region}
               waitAfterCompletion: 0
             2-fixENE:
-              command: |
+              command: !Sub |
                 powershell.exe -File C:\CyberArk\Deployment\FixENE.ps1
               waitAfterCompletion: 0
             3-postInstall:
@@ -480,13 +475,8 @@ Resources:
       UserData: !Base64 
         'Fn::Sub': >-
           <script>
-
-          cfn-init.exe -v -s ${AWS::StackId} -r VaultDRMachine --region
-          ${AWS::Region}
-
-          cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource
-          VaultDRMachine --region ${AWS::Region}
-
+          cfn-init.exe -v -s ${AWS::StackId} -r VaultDRMachine --configsets ascending
+          --region ${AWS::Region}
           </script>
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref VaultInstancesProfile
@@ -615,7 +605,7 @@ Resources:
                     arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:${LogGroup}:log-stream:${VaultPostInstallLogStream}
         - PolicyName: VaultSSMPolicy
           PolicyDocument:
-            Version: 2012-10-17
+            Version: '2012-10-17'
             Statement:
               - Effect: Allow
                 Action:
@@ -712,13 +702,8 @@ Resources:
       UserData: !Base64 
         'Fn::Sub': >-
           <script>
-
-          cfn-init.exe -v -s ${AWS::StackId} -r PVWAMachine --region
-          ${AWS::Region}
-
-          cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource
-          PVWAMachine --region ${AWS::Region}
-
+          cfn-init.exe -v -s ${AWS::StackId} -r PVWAMachine --configsets ascending
+          --region ${AWS::Region}
           </script>
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref ComponentInstanceProfile
@@ -842,13 +827,8 @@ Resources:
       UserData: !Base64 
         'Fn::Sub': >-
           <script>
-
-          cfn-init.exe -v -s ${AWS::StackId} -r CPMMachine --region
-          ${AWS::Region}
-
-          cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource
-          CPMMachine --region ${AWS::Region}
-
+          cfn-init.exe -v -s ${AWS::StackId} -r CPMMachine --configsets ascending
+          --region ${AWS::Region}
           </script>
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref ComponentInstanceProfile
@@ -966,13 +946,8 @@ Resources:
       UserData: !Base64 
         'Fn::Sub': >-
           <script>
-
-          cfn-init.exe -v -s ${AWS::StackId} -r PSMMachine --region
-          ${AWS::Region}
-
-          cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource
-          PSMMachine --region ${AWS::Region}
-
+          cfn-init.exe -v -s ${AWS::StackId} -r PSMMachine --configsets ascending
+          --region ${AWS::Region}
           </script>
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref ComponentInstanceProfile
